[package]
name = "worker-vtracer"
version = "0.0.0"
edition = "2021"
authors = ["Scott Fryxell <sfryxell@me.com>"]
license = "MIT"
keywords = ["svg", "computer-graphics", "vector-graphics", "path-tracing", "wasm", "web-programming"]
categories = ["graphics", "web-programming"]
repository = "https://github.com/realness/vtracer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.194"
visioncortex = "0.8.6"
vtracer = "0.6.3"
wasm-bindgen = "0.2.89"
