[package]
name = "vtracer"
version = "0.0.0"
edition = "2021"
description = "A wasm library for rendering SVG paths with vtracer"
authors = ["Scott Fryxell <sfryxell@me.com>"]
license = "MIT"
keywords = ["svg", "computer-graphics", "vector-graphics", "path-tracing", "wasm", "web-programming"]
categories = ["graphics", "web-programming"]
repository = "https://github.com/realness-online/vtracer"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
photon-rs = "0.3.2"
visioncortex = "0.8.6"
wasm-bindgen = "0.2.78"
